<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_menu_start_work"
        android:icon="@drawable/ic_play_arrow_black_24dp"
        android:title="@string/start"/>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu_connections"
            android:icon="@drawable/ic_cloud_queue_black_24dp"
            android:title="@string/connections" />
        <item
            android:id="@+id/nav_menu_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />
    </group>

    <item android:title="@string/configuration">
        <menu >
            <item
                android:id="@+id/nav_menu_auto_start"
                android:title="@string/auto_start"/>
            <item
                android:id="@+id/nav_menu_load_conf"
                android:icon="@drawable/ic_file_download_black_24dp"
                android:title="@string/load_conf" />
        </menu>
    </item>
</menu>
